--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
-    "nodemon": "^2.0.15",
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.19",
     "react-google-login": "^5.2.2"
-  },
-  "devDependencies": {}
+  }
 }
