--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "(backend of College-Canteen)",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js",
+    "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/sudhanshuprasad/College-Canteen-backend#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -27,6 +28,11 @@
     "mongoose": "^6.5.4",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "react-google-login": "^5.2.2"
+  },
+  "devDependencies": {
+    "typescript": "^4.8.3"
   }
 }
