--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "react-google-login": "^5.2.2"
+    "react-google-login": "^5.2.2",
+    "stripe": "^12.18.0"
   },
   "devDependencies": {
     "typescript": "^4.8.3"
